tests/errors/4_type_errors/boolop-test12.ifj.java
class Main { 
    static void run() {
    	int b = 5;
        boolean a = b; // int to boolean
    }
}